# stdcuda

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: clang-cxx-dev-tools.cmake
src/: CMakeLists.txt  cuda_exception.h  vector.h
test/: CMakeLists.txt  vector_test.cpp
tools/: run-clang-tidy.py
